test/domains/neth/intToEnum.chpl
enum e {Value1, Value2, Value3};
var r = makeRectangularDomain((0,0),(e.Value1,e.Value2),inclusive=true);
